--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <article class="col-md-6">
             <img class="img-responsive" src="images/project2.jpg" alt="project 2 pic" data-toggle="modal" data-target="#project2">
             <h3 class="project-name">CLASSIC ARCADE GAME CLONE</h3>
-            <a href="https://quickercater.herokuapp.com/">QuickerCater</a>
+            <a href="https://github.com/udacity/Appify/">https://github.com/udacity/project#2/</a>
           </article>
         </div>
 
