added quickercater to the portfolio

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
         <div class="row">
           <article class="col-md-6">
             <img class="img-responsive" src="images/project1.jpg" alt="project 1 pic" data-toggle="modal" data-target="#project1">
-            <h3 class="project-name">ONLINE RESUME PROJECT</h3>
-            <a href="https://github.com/udacity/Appify/">https://github.com/udacity/project#1/</a>
+            <h3 class="project-name"><a href="https://quickercater.herokuapp.com/">QuickerCater</a></h3>
           </article>
           <article class="col-md-6">
             <img class="img-responsive" src="images/project2.jpg" alt="project 2 pic" data-toggle="modal" data-target="#project2">
