Added Magic personality insight project to the portfolio

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
           </article>
           <article class="col-md-6">
             <img class="img-responsive" src="images/project2.jpg" alt="project 2 pic" data-toggle="modal" data-target="#project2">
-            <h3 class="project-name">CLASSIC ARCADE GAME CLONE</h3>
-            <a href="https://github.com/udacity/Appify/">https://github.com/udacity/project#2/</a>
+            <h3 class="project-name"><a href="https://magic-personality-insight.herokuapp.com/">Magic Personality Insight</a></h3>
           </article>
         </div>
 
