projects links will open in a new tab now

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         <div class="row">
           <article class="col-md-6">
             <img class="img-responsive" src="images/project1.jpg" alt="project 1 pic" data-toggle="modal" data-target="#project1">
-            <h3 class="project-name"><a href="https://quickercater.herokuapp.com/">QuickerCater</a></h3>
+            <h3 class="project-name"><a href="https://quickercater.herokuapp.com/" target="_blank">QuickerCater</a></h3>
           </article>
           <article class="col-md-6">
             <img class="img-responsive" src="images/project2.jpg" alt="project 2 pic" data-toggle="modal" data-target="#project2">
-            <h3 class="project-name"><a href="https://magic-personality-insight.herokuapp.com/">Magic Personality Insight</a></h3>
+            <h3 class="project-name"><a href="https://magic-personality-insight.herokuapp.com/" target="_blank">Magic Personality Insight</a></h3>
           </article>
         </div>
 
