added hangman project to the portfolio

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         <div class="row">
           <article class="col-md-6">
             <img class="img-responsive" src="images/project3.jpg" alt="project 3 pic" data-toggle="modal" data-target="#project3">
-            <h3 class="project-name">WEBSITE OPTIMIZATION</h3>
-            <a href="https://github.com/udacity/Appify/">https://github.com/udacity/project#3/</a>
+            <h3 class="project-name"><a href="https://hangman-2000.herokuapp.com/" target="_blank">Hangman 2000</a></h3>
           </article>
           <article class="col-md-6">
             <img class="img-responsive" src="images/project4.jpg" alt="project 4 pic" data-toggle="modal" data-target="#project4">
