--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       <section class="row text-center">
         <div class="row">
           <article class="col-md-6">
-            <img class="img-responsive" src="images/project1.jpg" alt="project 1 pic" data-toggle="modal" data-target="#project1">
-            <h3 class="project-name"><a href="https://quickercater.herokuapp.com/" target="_blank">QuickerCater</a></h3>
+            <img class="img-responsive" src="images/project1.jpg" alt="project 1 pic" data-toggle="modal" data-target="#project4">
+            <h3 class="project-name"><a href="http://tgvinodkumar.github.io/onlineResume/">Online resume project</a></h3>
           </article>
           <article class="col-md-6">
-            <img class="img-responsive" src="images/project2.jpg" alt="project 2 pic" data-toggle="modal" data-target="#project2">
-            <h3 class="project-name"><a href="https://magic-personality-insight.herokuapp.com/" target="_blank">Magic Personality Insight</a></h3>
+            <img class="img-responsive" src="images/project2.jpg" alt="project 2 pic" data-toggle="modal" data-target="#project1">
+            <h3 class="project-name"><a href="https://quickercater.herokuapp.com/" target="_blank">QuickerCater</a></h3>
           </article>
         </div>
 
@@ -70,9 +70,8 @@
             <h3 class="project-name"><a href="https://hangman-2000.herokuapp.com/" target="_blank">Hangman 2000</a></h3>
           </article>
           <article class="col-md-6">
-            <img class="img-responsive" src="images/project4.jpg" alt="project 4 pic" data-toggle="modal" data-target="#project4">
-            <h3 class="project-name">NEIGHBOURHOOD MAP</h3>
-            <a href="https://github.com/udacity/Appify/">https://github.com/udacity/project#4/</a>
+            <img class="img-responsive" src="images/project4.jpg" alt="project 4 pic" data-toggle="modal" data-target="#project2">
+            <h3 class="project-name"><a href="https://magic-personality-insight.herokuapp.com/" target="_blank">Magic Personality Insight</a></h3>
           </article>
         </div>
 
