online resume link will open in a new tab

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="row">
           <article class="col-md-6">
             <img class="img-responsive" src="images/project1.jpg" alt="project 1 pic" data-toggle="modal" data-target="#project4">
-            <h3 class="project-name"><a href="http://tgvinodkumar.github.io/onlineResume/">Online resume project</a></h3>
+            <h3 class="project-name"><a href="http://tgvinodkumar.github.io/onlineResume/" target="_blank">Online resume project</a></h3>
           </article>
           <article class="col-md-6">
             <img class="img-responsive" src="images/project2.jpg" alt="project 2 pic" data-toggle="modal" data-target="#project1">
